@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[162] --> Fix [ITEM] Black Bruise / [SPELL] Necrotic Touch. (By  joschiwald)
 [161] --> Update Halls Of Reflection by aedansilver.
 [160] --> Add Looking For Group Join All Maps.
 [159] --> Fix Ebon Gargoyle Target and make gargoyle benefit from haste auras, like unholy presence. (By Demonid)
